--- a/bootstrap_theme/pendigital/factory_cards_posts.scss
+++ b/bootstrap_theme/pendigital/factory_cards_posts.scss
@@ -117,7 +117,7 @@
             }
 
             .pd-cards-posts-1-body-text {
-                color: $gray-600;
+                color: $gray-700;
                 font-size: 0.9em;
                 line-height: 1.8;
             }
@@ -138,12 +138,12 @@
                         margin-top: 6px;
 
                         .pd-cards-posts-1-tag {
-                            color: $gray-600;
+                            color: $gray-700;
                             text-decoration: none;
                             text-transform: uppercase;
                             font-weight: 300;
                             font-size: 0.7rem;
-                            border: 1px solid $gray-600;
+                            border: 1px solid $gray-700;
                             border-radius: 4px;
                             padding: 4px 8px;
                             letter-spacing: 0.1em;
@@ -202,6 +202,13 @@
 
     // this is the anchor
     .pd-cards-posts-2-outer {
+        &:after {
+            content: " ";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+        }
+
         display: block;
         min-height: 260px;
         position: relative;
@@ -229,18 +236,6 @@
             top: 0;
             transition: opacity 0.3s;
             opacity: 0.7;
-
-            // &:before {
-            // content: " ";
-            // position: absolute;
-            // left: 0;
-            // top: 0;
-            // width: 100%;
-            // height: 100%;
-            // opacity: 0.2;
-            // transition: opacity 0.3s;
-            // background: linear-gradient(rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.1) 30%, rgba(0, 0, 0, 0.4) 70%, rgba(0, 0, 0, 0.9) 100%);
-            // }
         }
 
         .pd-cards-posts-2-body {
@@ -286,24 +281,552 @@
 
             .pd-cards-posts-2-overlay {
                 opacity: 0.3;
-
-                // &:before {
-                // opacity: 1;
-                // }
             }
         }
 
         &:focus {
+            outline: none;
+
             .pd-cards-posts-2-overlay {
-                &:before {
-                    opacity: 1;
-                    outline: 2px dotted $white;
-                    outline-offset: -4px;
+                opacity: 0.3;
+            }
+
+            &:after {
+                outline: 2px dotted $white;
+                outline-offset: -4px;
+            }
+        }
+    }
+}
+
+// end pd-cards-posts-2
+// start pd-cards-posts-3
+.pd-cards-posts-3 {
+    border-top: 1px solid $gray-300;
+    border-bottom: 1px solid $gray-300;
+
+    .pd-cards-posts-3-card-outer {
+        border: 1px solid $gray-200;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        flex-grow: 1;
+
+        .pd-cards-posts-3-image-outer {
+            position: relative;
+            overflow: hidden;
+            height: 280px;
+
+            a {
+                .pd-cards-posts-3-image {
+                    width: 100%;
+                    height: 100%;
+                    position: absolute;
+                    object-fit: cover;
+                    object-position: center center;
+                    transition: transform 0.4s;
+                }
+
+                &:hover {
+                    .pd-cards-posts-3-image {
+                        transform: scale(1.05);
+                    }
+                }
+
+                &:focus {
+                    .pd-cards-posts-3-image {
+                        outline: 2px dotted $white;
+                        outline-offset: -6px;
+                    }
+                }
+            }
+
+            .pd-cards-posts-3-categories-outer {
+                position: absolute;
+                top: 10px;
+                right: 10px;
+                min-height: 40px;
+                display: flex;
+                flex-direction: column;
+                justify-content: flex-start;
+                align-items: flex-end;
+
+                .pd-cards-posts-3-category {
+                    background: $info;
+                    padding: 6px 12px;
+                    border-radius: 50rem;
+                    text-decoration: none;
+                    color: #ffffff;
+                    font-weight: 300;
+                    font-size: 0.7rem;
+                    margin-bottom: 4px;
+                    letter-spacing: 0.1em;
+                    transition: background 0.4s;
+
+                    &:hover {
+                        background: lighten($info, 2%);
+                    }
+
+                    &:focus {
+                        outline: 2px dotted $white;
+                        outline-offset: 4px;
+                    }
+                }
+            }
+        }
+
+        .pd-cards-posts-3-text {
+            padding: 20px;
+            flex-grow: 1;
+
+            .pd-cards-posts-3-date {
+                margin-bottom: 0px;
+                color: $gray-400;
+                padding-top: 10px;
+                font-size: 0.8rem;
+                padding-bottom: 10px;
+            }
+
+            // anchor
+            .pd-posts-cards-3-headline {
+                text-decoration: none;
+
+                h2,
+                h3 {
+                    font-size: 1.4rem;
+                    font-weight: 700;
+                    line-height: 1.4;
+                    color: $gray-800;
+                    transition: color 0.4s;
+                }
+
+                &:hover {
+                    h2,
+                    h3 {
+                        color: $primary;
+                    }
+                }
+
+                &:focus {
+                    outline: none;
+
+                    h2,
+                    h3 {
+                        outline: 2px dotted $primary;
+                        outline-offset: 4px;
+                    }
+                }
+            }
+
+            .pd-cards-posts-3-body-text {
+                color: $gray-700;
+                font-size: 0.9em;
+                line-height: 1.8;
+            }
+
+            .pd-cards-posts-3-tags-outer {
+                display: flex;
+                flex-direction: row;
+                flex-wrap: wrap;
+
+                img {
+                    margin-right: 10px;
+                    margin-top: 10px;
+                    margin-bottom: 6px;
+                }
+
+                ul {
+                    li {
+                        margin-top: 6px;
+
+                        .pd-cards-posts-3-tag {
+                            color: $gray-700;
+                            text-decoration: none;
+                            text-transform: uppercase;
+                            font-weight: 300;
+                            font-size: 0.7rem;
+                            border: 1px solid $gray-700;
+                            border-radius: 4px;
+                            padding: 4px 8px;
+                            letter-spacing: 0.1em;
+                            transition: background 0.4s, border 0.4s;
+
+                            // white-space: nowrap;
+                            &:hover {
+                                border: 1px solid $info;
+                                background: $info;
+                                color: $white;
+                            }
+
+                            &:focus {
+                                outline: 2px dotted $primary;
+                                outline-offset: 4px;
+                            }
+                        }
+                    }
+                }
+            }
+
+            .pd-cards-posts-3-link {
+                font-weight: 300;
+                text-transform: uppercase;
+                text-decoration: none;
+                color: $gray-800;
+                display: inline-block;
+                margin-bottom: 10px;
+                margin-top: 10px;
+                letter-spacing: 0.1em;
+                transition: color 0.4s;
+
+                &:after {
+                    content: ">";
+                    padding-left: 10px;
+                }
+
+                &:hover {
+                    color: $primary;
+                }
+
+                &:focus {
+                    outline: 2px dotted $primary;
+                    outline-offset: 4px;
+                }
+            }
+        }
+    }
+
+    .pd-cards-posts-3-cats-col {
+        h2,
+        h3 {
+            font-weight: 700;
+            font-size: 0.9rem;
+            text-transform: uppercase;
+        }
+
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            padding-bottom: 40px;
+
+            li {
+                padding-bottom: 8px;
+                padding-top: 4px;
+                border-bottom: 1px solid $gray-300;
+
+                a {
+                    text-transform: uppercase;
+                    font-size: 0.7rem;
+                    text-decoration: none;
+                    color: $gray-700;
+                    transition: color 0.4s;
+                    letter-spacing: 0.1em;
+                    font-weight: 300;
+
+                    &:hover {
+                        color: $gray-500;
+                    }
+
+                    &:focus {
+                        outline: 2px dotted $primary;
+                        outline-offset: 4px;
+                    }
+                }
+            }
+        }
+
+        .pd-cards-posts-3-tag-list {
+            width: 100%;
+            margin-left: -4px;
+
+            a {
+                display: inline-block;
+                text-decoration: none;
+                font-size: 0.7rem;
+                border: 1px solid $gray-700;
+                padding: 3px 6px;
+                margin: 4px;
+                color: $gray-700;
+                border-radius: 4px;
+                text-transform: uppercase;
+                letter-spacing: 0.1em;
+                transition: background 0.4s, color 0.4s, border 0.4s;
+
+                &:hover {
+                    border: 1px solid $info;
+                    background: $info;
+                    color: $white;
+                }
+
+                &:focus {
+                    outline: 2px dotted $primary;
+                    outline-offset: 4px;
+                }
+            }
+        }
+
+        .pd-cards-posts-3-banner {
+            background: linear-gradient(180deg, $primary, darken($primary, 10%));
+            padding: 40px 20px;
+
+            .pd-cards-posts-3-banner-headline {
+                color: white;
+                font-weight: 300;
+                font-size: 2rem;
+                line-height: 1.4;
+
+                strong {
+                    font-weight: 700;
+                }
+
+                @media (max-width: 991px) {
+                    font-size: 1.4rem;
+                }
+            }
+
+            .pd-cards-posts-3-banner-subHeadline {
+                color: white;
+                font-weight: 300;
+                font-size: 1rem;
+            }
+
+            .pd-cards-posts-3-banner-btn-outer {
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
+
+                .btn.btn-info {
+                    color: $white;
+
+                    &:focus {
+                        outline: 2px dotted $white;
+                        outline-offset: 4px;
+                    }
                 }
             }
         }
     }
 }
+
+// end pd-cards-posts-3
+// start pd-cards-posts-4
+.pd-cards-posts-4 {
+    border-top: 1px solid $gray-300;
+    border-bottom: 1px solid $gray-300;
+
+    .pd-cards-posts-4-outer {
+        &:after {
+            content: " ";
+            position: absolute;
+            width: 100%;
+            height: 100%;
+        }
+
+        display: block;
+        min-height: 260px;
+        position: relative;
+        overflow: hidden;
+
+        @media (max-width: 767px) {
+            min-height: 340px;
+        }
+
+        .pd-cards-posts-4-image {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center center;
+            position: absolute;
+            transition: transform 0.4s;
+        }
+
+        .pd-cards-posts-4-overlay {
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 0.4) 30%, rgba(0, 0, 0, 0.6) 70%, rgba(0, 0, 0, 1) 100%);
+            position: absolute;
+            left: 0;
+            top: 0;
+            transition: opacity 0.3s;
+            opacity: 0.7;
+        }
+
+        .pd-cards-posts-4-body {
+            position: absolute;
+            color: white;
+            padding: 16px;
+            bottom: 0;
+
+            h3 {
+                font-weight: 700;
+                font-size: 1rem;
+                line-height: 1.4;
+                margin-bottom: 0px;
+            }
+        }
+
+        .pd-cards-posts-4-categories-outer {
+            position: absolute;
+            padding: 10px;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: flex-end;
+            width: 100%;
+
+            p {
+                color: $white;
+                font-size: 0.6rem;
+                letter-spacing: 0.1em;
+                background: $info;
+                padding: 4px 10px;
+                border-radius: 50rem;
+                margin-bottom: 6px;
+                margin-left: 3px;
+                margin-right: 3px;
+            }
+        }
+
+        &:hover {
+            .pd-cards-posts-4-image {
+                transform: scale(1.05);
+            }
+
+            .pd-cards-posts-4-overlay {
+                opacity: 0.3;
+            }
+        }
+
+        &:focus {
+            outline: none;
+
+            .pd-cards-posts-4-overlay {
+                opacity: 0.3;
+            }
+
+            &:after {
+                outline: 2px dotted $white;
+                outline-offset: -4px;
+            }
+        }
+    }
+
+    .pd-cards-posts-4-cats-col {
+        h2,
+        h3 {
+            font-weight: 700;
+            font-size: 0.9rem;
+            text-transform: uppercase;
+        }
+
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            padding-bottom: 40px;
+
+            li {
+                padding-bottom: 8px;
+                padding-top: 4px;
+                border-bottom: 1px solid $gray-300;
+
+                a {
+                    text-transform: uppercase;
+                    font-size: 0.7rem;
+                    text-decoration: none;
+                    color: $gray-700;
+                    transition: color 0.4s;
+                    letter-spacing: 0.1em;
+                    font-weight: 300;
+
+                    &:hover {
+                        color: $gray-500;
+                    }
+
+                    &:focus {
+                        outline: 2px dotted $primary;
+                        outline-offset: 4px;
+                    }
+                }
+            }
+        }
+
+        .pd-cards-posts-4-tag-list {
+            width: 100%;
+            margin-left: -4px;
+
+            a {
+                display: inline-block;
+                text-decoration: none;
+                font-size: 0.7rem;
+                border: 1px solid $gray-700;
+                padding: 3px 6px;
+                margin: 4px;
+                color: $gray-700;
+                border-radius: 4px;
+                text-transform: uppercase;
+                letter-spacing: 0.1em;
+                transition: background 0.4s, color 0.4s, border 0.4s;
+
+                &:hover {
+                    border: 1px solid $info;
+                    background: $info;
+                    color: $white;
+                }
+
+                &:focus {
+                    outline: 2px dotted $primary;
+                    outline-offset: 4px;
+                }
+            }
+        }
+
+        .pd-cards-posts-4-banner {
+            background: linear-gradient(180deg, $primary, darken($primary, 10%));
+            padding: 40px 20px;
+
+            .pd-cards-posts-4-banner-headline {
+                color: white;
+                font-weight: 300;
+                font-size: 2rem;
+                line-height: 1.4;
+
+                strong {
+                    font-weight: 700;
+                }
+
+                @media (max-width: 991px) {
+                    font-size: 1.4rem;
+                }
+            }
+
+            .pd-cards-posts-4-banner-subHeadline {
+                color: white;
+                font-weight: 300;
+                font-size: 1rem;
+            }
+
+            .pd-cards-posts-4-banner-btn-outer {
+                display: flex;
+                flex-direction: row;
+                justify-content: flex-start;
+
+                .btn.btn-info {
+                    color: $white;
+
+                    &:focus {
+                        outline: 2px dotted $white;
+                        outline-offset: 4px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+
+
 
 
 
