--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -62,5 +62,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_cards_posts";
 @import "pendigital/factory_headlines";
 @import "pendigital/factory_social_media_share";
+@import "pendigital/factory_blog_post";
 
 /* Custom CSS rules come here */
