Added blog post sample

--- a/bootstrap_theme/pendigital/factory_heroesHalf.scss
+++ b/bootstrap_theme/pendigital/factory_heroesHalf.scss
@@ -14,8 +14,8 @@
             font-weight: 700;
             font-size: 0.7rem;
             color: $white;
-            display: inline-block;
 
+            // display: inline-block;
             // background: rgba(255, 255, 255, 1);
             background: $info;
             padding: 8px 14px;
