--- a/bootstrap_theme/pendigital/factory_people.scss
+++ b/bootstrap_theme/pendigital/factory_people.scss
@@ -489,7 +489,7 @@
             padding-bottom: 20px;
             background: rgba(255,255,255,0.9);
             z-index: 2;
-            transition: padding-bottom 0.4s;
+            transition: height 0.4s;
 
             p {
                 font-weight: 300;
