--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -63,5 +63,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_headlines";
 @import "pendigital/factory_social_media_share";
 @import "pendigital/factory_blog_post";
+@import "pendigital/factory_forms";
 
 /* Custom CSS rules come here */
