Added text layout styles

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -64,5 +64,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_social_media_share";
 @import "pendigital/factory_blog_post";
 @import "pendigital/factory_forms";
+@import "pendigital/factory_text";
 
 /* Custom CSS rules come here */
