--- a/bootstrap_theme/pendigital/factory_heroes.scss
+++ b/bootstrap_theme/pendigital/factory_heroes.scss
@@ -851,6 +851,79 @@
     }
 }
 
+// end .pd-hero-8
+// start .pd-hero-9
+.pd-hero-9 {
+    h1 {
+        text-transform: uppercase;
+        font-weight: 700;
+        font-size: 0.8rem;
+        letter-spacing: 0.1em;
+    }
+
+    .pd-hero-9-text-outer {
+        border-left: 10px solid #5b3bf3;
+        padding-left: 30px;
+
+        .pd-hero-9-headline {
+            font-weight: 700;
+            font-size: 3rem;
+        }
+
+        .pd-hero-9-subHeadline {
+            font-weight: 300;
+            font-size: 1.2rem;
+        }
+    }
+
+    .pd-hero-9-col-image {
+        position: relative;
+        min-height: 540px;
+        height: 100%;
+
+        .pd-hero-9-image {
+            position: absolute;
+            object-fit: cover;
+            object-position: center center;
+            min-height: 540px;
+            width: 100%;
+            opacity: 0;
+            transition: opacity 0.6s;
+        }
+
+        .pd-hero-9-image-loaded {
+            opacity: 1;
+        }
+
+        .pd-hero-9-image-overlay {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            opacity: 0;
+            transition: opacity 0.6s;
+            background: linear-gradient(rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0.15) 40%, rgba(0, 0, 0, 0.15) 60%, rgba(0, 0, 0, 0.4) 100%);
+        }
+        .pd-hero-9-image-overlay.pd-hero-9-image-overlay-loaded {
+            opacity: 1;
+        }
+
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
