--- a/bootstrap_theme/pendigital/factory_heroes.scss
+++ b/bootstrap_theme/pendigital/factory_heroes.scss
@@ -1048,6 +1048,97 @@
 }
 
 // end .pd-hero-10
+// start .pd-hero-11
+// end .pd-hero-11
+.pd-hero-11 {
+    background: linear-gradient(68deg, #5433FF 0%, #20BDFF 50%, #A5FECB 100%);
+
+    @media (max-width: 767px) {
+        background: linear-gradient(225deg, #5433FF 0%, #20BDFF 50%, #A5FECB 100%);
+    }
+
+    h1 {
+        font-size: 0.7rem;
+        text-transform: uppercase;
+        letter-spacing: 0.1em;
+        font-weight: 700;
+        color: white;
+    }
+
+    .pd-hero-11-headline {
+        font-size: 2.8rem;
+        font-weight: 300;
+        color: white;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .pd-hero-11-subHeadline {
+        line-height: 1.8;
+        font-weight: 300;
+        font-size: 1rem;
+        color: white;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .pd-hero-11-btn {
+        background: $info;
+        padding: 10px 20px;
+        border-radius: 50rem;
+        color: $white;
+        text-decoration: none;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        text-transform: uppercase;
+        font-size: 0.7rem;
+        font-weight: 700;
+        transition: background 0.4s;
+
+        &:hover {
+            background: darken($info, 10%);
+        }
+    }
+
+    .pd-hero-11-btn-light {
+        text-transform: uppercase;
+        text-decoration: none;
+        color: $white;
+        font-size: 0.8rem;
+        padding-left: 20px;
+        font-weight: 400;
+        transition: color 0.4s;
+
+        @media (max-width: 767px) {
+            padding-left: 0px;
+        }
+
+        &:hover {
+            color: $gray-200;
+        }
+    }
+
+    .pd-hero-11-img-outer {
+        min-height: 500px;
+
+        @media (max-width: 767px) {
+            min-height: auto;
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
 
 
 
