Added factory grid

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -65,5 +65,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_blog_post";
 @import "pendigital/factory_forms";
 @import "pendigital/factory_text";
+@import "pendigital/factory_grid";
 
 /* Custom CSS rules come here */
