--- a/bootstrap_theme/pendigital/factory_grid.scss
+++ b/bootstrap_theme/pendigital/factory_grid.scss
@@ -4,7 +4,7 @@
         .pd-grid-1-grid-outer {
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
-            grid-template-rows: 240px 240px 240px;
+            grid-template-rows: 340px 340px 340px;
             grid-gap: 4px;
         }
     }
@@ -13,7 +13,7 @@
         .pd-grid-1-grid-outer {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            grid-template-rows: 240px 240px 240px 240px;
+            grid-template-rows: 340px 340px 340px 340px;
             grid-gap: 4px;
         }
     }
@@ -27,9 +27,88 @@
         }
     }
 
+    // is the anchor
     .pd-grid-1-item {
         position: relative;
         overflow: hidden;
+        color: white;
+        text-decoration: none;
+
+        .pd-grid-1-image {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            object-fit: cover;
+            object-position: center center;
+            transition: transform 0.4s;
+        }
+
+        .pd-grid-1-image-overlay {
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+            background: rgba(0, 0, 0, 0.3);
+            transition: background 0.4s;
+        }
+
+        .pd-grid-1-item-content {
+            position: absolute;
+            padding: 14px;
+            left: 0;
+            width: 100%;
+            background: rgba(255, 255, 255, 0.4);
+            bottom: 0;
+            transition: background 0.4s, padding-bottom 0.4s, color 0.2s;
+
+            .pd-grid-1-item-tag {
+                background: green;
+                display: inline-block;
+                padding: 8px 16px;
+                border-radius: 50rem;
+                color: white;
+                letter-spacing: 0.2em;
+                font-size: 0.8rem;
+                box-shadow: -1px 4px 6px rgba(0, 0, 0, 0.4);
+                font-weight: 300;
+            }
+
+            .pd-grid-1-item-headline {
+                font-size: 1.2rem;
+                font-weight: 700;
+            }
+
+            .pd-grid-1-item-subPara {
+                margin-bottom: 2px;
+                font-weight: 300;
+                line-height: 1.8;
+                font-size: 0.8rem;
+            }
+        }
+
+        &:hover {
+            .pd-grid-1-image-overlay {
+                background: rgba(0, 0, 0, 0);
+            }
+
+            .pd-grid-1-item-content {
+                background: rgba(255, 255, 255, 0.7);
+                color: $black;
+                padding-bottom: 30px;
+            }
+
+            .pd-grid-1-image {
+                transform: scale(1.1);
+            }
+        }
+
+        &:focus {
+            .pd-grid-1-image-overlay {
+                outline: 2px dotted $white;
+                outline-offset: -4px;
+            }
+        }
     }
 
     @media (min-width:768px) {
@@ -176,6 +255,15 @@
         }
     }
 }
+
+
+
+
+
+
+
+
+
 
 
 
