--- a/bootstrap_theme/pendigital/factory_testimonials.scss
+++ b/bootstrap_theme/pendigital/factory_testimonials.scss
@@ -680,7 +680,7 @@
         }
 
         &:focus {
-            outline: 2px dotted $primary;
+            outline: 2px dotted $white;
             outline-offset: 4px;
         }
     }
