--- a/bootstrap_theme/pendigital/factory_sections.scss
+++ b/bootstrap_theme/pendigital/factory_sections.scss
@@ -1045,6 +1045,12 @@
     .pd-section-15-block-para {
         font-size: 0.9rem;
         line-height: 1.8;
+
+        a {
+            text-decoration: none;
+            color: $primary;
+            font-weight: 700;
+        }
     }
 
     .pd-section-15-btn {
@@ -1074,6 +1080,85 @@
 }
 
 // end pd-section-15
+// start pd-section-16
+.pd-section-16 {
+    background: linear-gradient(rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0.8) 50%, rgba(0,0,0,0.9) 100%);
+    color: $white;
+
+    .pd-section-16-intro {
+        font-size: 0.8em;
+        font-weight: 700;
+        letter-spacing: 0.2em;
+        text-transform: uppercase;
+    }
+
+    .pd-section-16-headline {
+        font-size: 2rem;
+        line-height: 1.6;
+        font-weight: 700;
+    }
+
+    .pd-section-16-img-thumbnail {
+        border-radius: 50%;
+    }
+
+    .pd-section-16-img-thumbnail.pd-section-16-img-thumbnail-right {
+        margin-left: -20px;
+    }
+
+    .pd-section-16-leading-para {
+        font-size: 1.3rem;
+        line-height: 1.8;
+        font-weight: 300;
+
+        strong {
+            font-weight: 700;
+        }
+    }
+
+    .pd-section-16-subHeadlines {
+        font-size: 1.4rem;
+        font-weight: 700;
+    }
+
+    .pd-section-16-block-para {
+        font-size: 0.9rem;
+        line-height: 1.8;
+
+        a {
+            text-decoration: none;
+            color: $gray-300;
+            font-weight: 700;
+        }
+    }
+
+    .pd-section-16-btn {
+        border: 1px solid $white;
+        padding: 10px 20px;
+        border-radius: 50rem;
+        margin-top: 10px;
+        display: inline-block;
+        text-transform: uppercase;
+        text-decoration: none;
+        font-weight: 700;
+        color: $white;
+        font-size: 0.8rem;
+        transition: background 0.4s;
+
+        &:hover {
+            border: 1px solid darken($info, 10%);
+            background: darken($info, 10%);
+            color: $white;
+        }
+
+        &:focus {
+            outline: 2px dotted $primary;
+            outline-offset: 4px;
+        }
+    }
+}
+
+// end pd-section-16
 
 
 
