Renamed menu files and added to the custom.scss

--- a/bootstrap_theme/custom.scss
+++ b/bootstrap_theme/custom.scss
@@ -67,5 +67,6 @@ $font-family-sans-serif: 'Montserrat', sans-serif;
 @import "pendigital/factory_text";
 @import "pendigital/factory_grid";
 @import "pendigital/factory_widgets";
+@import "pendigital/factory_menus";
 
 /* Custom CSS rules come here */
